# local-inference-bench

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
config/data/: npc-knowledge.toml
config/features/: agent-preamble.toml  agent-tool.toml  basic-completion.toml  multi-turn.toml  rag-colbert.toml  rag-dense.toml  rag-hybrid.toml  rag.toml
config/profiles/: gemma-12b-spec.toml  gemma-12b.toml  gemma-4b.toml  gemma4-e4b-nothink.toml  gemma4-e4b-think.toml  gemma4-e4b.toml  qwen3-8b.toml
config/prompts/: npc-dialogue.toml  npc-rag-test.toml  npc-tool-test.toml
docs/: build-issues.md  embedding-search.md  logging.md  models.md  profile-guide.md  rig-notes.md  server-options.md  test-coverage-analysis.md
examples/: score_dist.rs
src/: chat.rs  feature.rs  llama_client.rs  main.rs  profile.rs  rag.rs  server.rs
src/experiment/: mod.rs  prompt_set.rs  runner.rs  store.rs
src/tools/: inventory.rs  kung_fu.rs  mod.rs  relationship.rs
tools/: jsonl-viewer.html  view-runs.py
