[package]
name = "local-inference-bench"
version = "0.1.0"
edition = "2024"
description = "Local LLM experimentation bench: Server Profile × RIG Feature × Prompt Set"

[dependencies]
# 서버 health check (blocking HTTP)
ureq = "2"

# LLM 클라이언트 프레임워크
rig-core = { version = "0.31", features = ["derive"] }

# llama-server timings 인터셉트용 (rig-core와 동일 버전)
bytes = "1"
http = "1"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
futures = "0.3"

# 비동기 런타임
tokio = { version = "1", features = ["full"] }

# 에러 + 직렬화
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 시간 + ID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.18"

# BGE-M3 ONNX 인프로세스 임베딩
bge-m3-onnx-rust = { git = "https://github.com/bumkoo/bge-m3-onnx-rust.git", branch = "main" }
